--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 title: lonelywriter
-description: Just concentrate on writing. This is a theme without any extra frills and fancy things. Get the theme <a href="https://github.com/lingxz/jekyll-lonelywriter">here</a>.
+description: Just concentrate on writing. This is a theme without any extra frills and fancy things. Get the theme <a href="https://github.com/lingxz/lonelywriter" target='_blank'>here</a>.
 permalink: /blog/:title/
 tagline: a writing blog
+url: "https://theconfused.me" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl: "/lonelywriter" # the subpath of your site, e.g. "/blog" leave blank if no subpath
 
 # Conversion
 markdown: kramdown
