--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: lonelywriter
-description: Just concentrate on writing. This is a theme without any extra frills and fancy things. Get the theme <a href="https://github.com/lingxz/lonelywriter" target='_blank'>here</a>.
+description: Just concentrate on writing. This is a theme without any extra frills and fancy things. Get the theme <a href="https://github.com/lingxz/lonelywriter" target="_blank">here</a>.
 permalink: /blog/:title/
 tagline: a writing blog
 url: "https://theconfused.me" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
