--- a/_config.yml
+++ b/_config.yml
@@ -16,3 +16,5 @@ kramdown:
 sass:
   sass_dir: _sass
   style: compressed # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
+
+color-theme: light
